# BlockInverseGPFA

./: .gitignore  .readthedocs.yml  LICENSE.txt  README.md  pyproject.toml  requirements.text  requirements.txt
.github/workflows/: tests.yml
blockinvgpfa/: __init__.py  blockinvgpfa.py
docs/: acknowledgments.rst  authors.rst  blockinv_gpfa_class.rst  citation.rst  conf.py  contribute.rst  gpfa_class.rst  index.rst  installation.rst  neural_example.ipynb  preprocessing.rst  preprocessing_class.rst  requirements.txt
docs/_templates/autosummary/: class.rst
docs/_toctree/gpfa/: gpfa.gpfa.GPFA.rst
docs/_toctree/preprocessing/: gpfa.preprocessing.EventTimesToCounts.rst
gpfa/: __init__.py  conversion.py  gpfa.py  gpfa_core.py  gpfa_inv_persymm.py  gpfa_non_incremental_inv.py  gpfa_util.py  gpfa_variants.py  preprocessing.py  profile_gpfa.py  utils.py
gpfa/preprocessing/: __init__.py  gpfa_preprocessing.py
profiler/: profile_gpfa.py
test/: __init__.py  gpfa.py  test_blockinvgpfa.py  test_gpfa.py  test_preprocessing.py
tutorial/: gpfa.ipynb
