[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockinversegpfa"
version = "0.1.0"
description = "A scikit-learn-compatible GPFA implementation using block matrix inversion."
authors = [
    {name = "Brooks M. MUSANGU", email = "brooks_musangu@hms.harvard.edu"},
    {name = "Jan DRUGOWITSCH", email = "jan_drugowitsch@hms.harvard.edu"}
]
license = {text = "BSD-3-Clause", file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==2.2.1",
    "scikit-learn==1.6.0",
    "scipy==1.15.0",
    "tqdm==4.67.1"
]

[project.optional-dependencies]
test = [
    "pytest==7.3.1"
]
docs = [
    "nbsphinx==0.9.6",
    "numpydoc==1.8.0",
    "Sphinx==8.1.3",
    "sphinx-rtd-theme==3.0.2"
]

[project.urls]
Homepage = "https://github.com/CausalityInMotion/BlockInverseGPFA"
